Fix: Non-responsiveness causing white margin on right edge
• Fixes `non-responsive.css` causing the rightmost edge of the page to be white when the viewport is narrower than 970px by setting a min-width on the <body>.
	» <body> should be enough; I don't think it needs to affect the <html> too.

--- a/css/styles.css
+++ b/css/styles.css
@@ -6262,5 +6262,9 @@ button.close {
   background-color: transparent !important;
 }
 
+/* fix for right-edge white area when the viewport is narrower than bootstrap .container width set in non-responsive.css */
+body {
+  min-width: 970px !important;
+}
 
 /*# sourceMappingURL=styles.css.map */
