Parent/child screenheight % generation LESS
In mixins.less:
• New `screenheight()` macro calculates the height percentage of a child class relative to its parent.
• New `generate-screenheights()` macro generates rules for each of the percentage values in the passed-in `screenheights` arrays, and child rules (`screenheight-100 { … > screenheight-50 {} }`) for each of the possible child screenheights (those at or bellow the parent's percentage).
	» Yeah… Wow.  The fact that this is even possible is amazing.
	» Safely handles normalization of array values to class-friendly numbers or percentages where needed.
	» Should be able to expand to any number of percentage options, and to do a third level if wanted.
	• Uses the fantastic `for.less` mixin plugin, added from https://github.com/seven-phases-max/less.curious/blob/master/src/for.less

In main.less:
• Added `html, body { height: 100%; }` necessary for full-height CSS to work.
• Added a `.generate-screenheights()` call for heights 50%, 100%, 150%, 200%, 300%, and 400%.
	» And it all works!  Srsly'mazing.

--- a/css/styles.css
+++ b/css/styles.css
@@ -6262,9 +6262,93 @@ button.close {
   background-color: transparent !important;
 }
 
-/* fix for right-edge white area when the viewport is narrower than bootstrap .container width set in non-responsive.css */
 body {
   min-width: 970px !important;
+}
+html,
+body {
+  height: 100%;
+}
+.screenheight-50 {
+  height: 50%;
+}
+.screenheight-50 > .screenheight-50 {
+  height: 100%;
+}
+.screenheight-100 {
+  height: 100%;
+}
+.screenheight-100 > .screenheight-50 {
+  height: 50%;
+}
+.screenheight-100 > .screenheight-100 {
+  height: 100%;
+}
+.screenheight-150 {
+  height: 150%;
+}
+.screenheight-150 > .screenheight-50 {
+  height: 33.33333333%;
+}
+.screenheight-150 > .screenheight-100 {
+  height: 66.66666667%;
+}
+.screenheight-150 > .screenheight-150 {
+  height: 100%;
+}
+.screenheight-200 {
+  height: 200%;
+}
+.screenheight-200 > .screenheight-50 {
+  height: 25%;
+}
+.screenheight-200 > .screenheight-100 {
+  height: 50%;
+}
+.screenheight-200 > .screenheight-150 {
+  height: 75%;
+}
+.screenheight-200 > .screenheight-200 {
+  height: 100%;
+}
+.screenheight-300 {
+  height: 300%;
+}
+.screenheight-300 > .screenheight-50 {
+  height: 16.66666667%;
+}
+.screenheight-300 > .screenheight-100 {
+  height: 33.33333333%;
+}
+.screenheight-300 > .screenheight-150 {
+  height: 50%;
+}
+.screenheight-300 > .screenheight-200 {
+  height: 66.66666667%;
+}
+.screenheight-300 > .screenheight-300 {
+  height: 100%;
+}
+.screenheight-400 {
+  height: 400%;
+}
+.screenheight-400 > .screenheight-50 {
+  height: 12.5%;
+}
+.screenheight-400 > .screenheight-100 {
+  height: 25%;
+}
+.screenheight-400 > .screenheight-150 {
+  height: 37.5%;
+}
+.screenheight-400 > .screenheight-200 {
+  height: 50%;
+}
+.screenheight-400 > .screenheight-300 {
+  height: 75%;
+}
+.screenheight-400 > .screenheight-400 {
+  height: 100%;
 }
 
 /*# sourceMappingURL=styles.css.map */
