Minor: Updated LESS comments
• Switched to using `//` and `///` comment syntaxes, since it's easier to type, modify, and read.

--- a/less/main.less
+++ b/less/main.less
@@ -1,4 +1,4 @@
-/* fix for right-edge white area when the viewport is narrower than bootstrap .container width set in non-responsive.css */
+/// fix for right-edge white area when the viewport is narrower than bootstrap .container width set in non-responsive.css
 body {
 	min-width: 970px !important;
 }
