--- a/less/main.less
+++ b/less/main.less
@@ -10,3 +10,24 @@ html, body { height: 100%; }
 
 @screenheights: 50%, 100%, 150%, 200%, 300%, 400%;
 .generate-screenheights(@screenheights);
+
+
+// phases
+
+.phase {
+}
+#sky-phase {
+	.phase;
+	background-color: @blue-darker;
+	color: @cobalt;
+}
+#ambitions-phase {
+	.phase;
+	background-color: @teal-darker;
+	color: white;
+}
+#title-phase {
+	.phase;
+	background-color: @cobalt-light;
+	color: black;
+}
