Changed title-phase text color to darker-purple
• Changed `title-phase`'s text `color` to darker-purple (instead of just black).

--- a/css/styles.css
+++ b/css/styles.css
@@ -6375,6 +6375,6 @@ body {
   background-image: linear-gradient(to bottom, #ffffff 0%, #accdea 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffaccdea', GradientType=0);
-  color: black;
+  color: #352337;
 }
 /*# sourceMappingURL=styles.css.map */
