--- a/less/main.less
+++ b/less/main.less
@@ -38,5 +38,5 @@ html, body { height: 100%; }
 	background-color: @cobalt-light;
 	#gradient > .vertical(white, @cobalt-light);
 	
-	color: black;
+	color: @purple-darker;
 }
