--- a/less/main.less
+++ b/less/main.less
@@ -1,6 +1,7 @@
 /// fix for right-edge white area when the viewport is narrower than bootstrap .container width set in non-responsive.css
+@body-min-width: 970px;
 body {
-	min-width: 970px !important;
+	min-width: @body-min-width !important;
 }
 
 
