Added starfield .backs to page
• Added 4 `<div class="back"></div>` elements inside the #sky-phase section, each with a id numbered from #starfield1 to #starfield4.
• Created a `.starfield` class and `#starfield1`-`4` id CSS to set the background-repeat, background-images, and starting opacities (#1 at 25%, #4 at 50%, the others at 0%).
	• Made `.phase` position: relative, and made .back elements directly under it position: absolute with 100% width & height.
		» Pos: relative can cause other layout problems here and there.  So far, this seems to be working fine.  I'll have to keep an eye on it.

--- a/css/styles-test.css
+++ b/css/styles-test.css
@@ -6403,6 +6403,33 @@ body {
   width: 100%;
   height: 100%;
 }
+.starfield {
+  background-repeat: repeat;
+}
+#starfield1 {
+  background-repeat: repeat;
+  background-image: url('../graphics/starfield1.s512.png');
+  opacity: 0.25;
+  filter: alpha(opacity=25);
+}
+#starfield2 {
+  background-repeat: repeat;
+  background-image: url('../graphics/starfield2.s1024.png');
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
+#starfield3 {
+  background-repeat: repeat;
+  background-image: url('../graphics/starfield3.s720.png');
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
+#starfield4 {
+  background-repeat: repeat;
+  background-image: url('../graphics/starfield4.s700.png');
+  opacity: 0.5;
+  filter: alpha(opacity=50);
+}
 #wrapper {
   position: relative;
   height: auto !important;
