Minor: Test on-light/-dark to solid white/black
• Changed the `on-light` and `on-dark` classes (used for color-swatches.html's left and right sides) from 5% gray and 95% gray to 0% and 100%.

--- a/css/styles-test.css
+++ b/css/styles-test.css
@@ -6445,10 +6445,10 @@ body {
   min-width: 970px;
 }
 #full-back .on-dark {
-  background-color: #0d0d0d;
+  background-color: #000000;
 }
 #full-back .on-light {
-  background-color: #f2f2f2;
+  background-color: #ffffff;
 }
 #full-back .on-half {
   width: 50%;
