Fix: Switched LESS mixins to use `;`
• Switched our custom LESS mixins to use `;` instead of `,` for parameter lists.
	» This from the LESS docs sums it up best: “Parameters are either semicolon or comma separated. It is recommended to use semicolon. The symbol comma has double meaning: it can be interpreted either as a mixin parameters separator or css list separator.”

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -4,14 +4,14 @@
 
 // screenheight macros
 
-.screenheight(@childPerc, @parentPerc) {
+.screenheight(@childPerc; @parentPerc) {
 	@height: percentage(@childPerc / @parentPerc);
 }
 
 /// @based-on: stackoverflow.com/questions/21440789/loop-through-array-of-valuesIn-less#21441220
 /// @arg screenheights: an array of screen height percentages, as integer numbers or percentages.
 /// 	Must be in ascending order (in order to nest properly).
-.generate-screenheights(@screenheights, @classPrefix: screenheight-)
+.generate-screenheights(@screenheights; @classPrefix: screenheight-)
 {
 	.for(length(@screenheights)); .-each(@screenheightI) {
 		@screenheight: unit(extract(@screenheights, @screenheightI), %);
@@ -31,7 +31,7 @@
 				@childClassname: ~"@{classPrefix}@{childScreenheightNum}";
 				> .@{childClassname} {
 					/// @property: calculated child height percentage
-					.screenheight(@childScreenheight, @screenheight); height: @height;
+					.screenheight(@childScreenheight; @screenheight); height: @height;
 				}
 			}
 		}
