--- a/css/styles-test.css
+++ b/css/styles-test.css
@@ -6269,85 +6269,85 @@ html,
 body {
   height: 100%;
 }
-.screenheight-50 {
+.vh-50 {
   height: 50%;
 }
-.screenheight-50 > .screenheight-50 {
+.vh-50 > .vh-50 {
   height: 100%;
 }
-.screenheight-100 {
+.vh-100 {
   height: 100%;
 }
-.screenheight-100 > .screenheight-50 {
+.vh-100 > .vh-50 {
   height: 50%;
 }
-.screenheight-100 > .screenheight-100 {
+.vh-100 > .vh-100 {
   height: 100%;
 }
-.screenheight-150 {
+.vh-150 {
   height: 150%;
 }
-.screenheight-150 > .screenheight-50 {
+.vh-150 > .vh-50 {
   height: 33.33333333%;
 }
-.screenheight-150 > .screenheight-100 {
+.vh-150 > .vh-100 {
   height: 66.66666667%;
 }
-.screenheight-150 > .screenheight-150 {
+.vh-150 > .vh-150 {
   height: 100%;
 }
-.screenheight-200 {
+.vh-200 {
   height: 200%;
 }
-.screenheight-200 > .screenheight-50 {
+.vh-200 > .vh-50 {
   height: 25%;
 }
-.screenheight-200 > .screenheight-100 {
+.vh-200 > .vh-100 {
   height: 50%;
 }
-.screenheight-200 > .screenheight-150 {
+.vh-200 > .vh-150 {
   height: 75%;
 }
-.screenheight-200 > .screenheight-200 {
+.vh-200 > .vh-200 {
   height: 100%;
 }
-.screenheight-300 {
+.vh-300 {
   height: 300%;
 }
-.screenheight-300 > .screenheight-50 {
+.vh-300 > .vh-50 {
   height: 16.66666667%;
 }
-.screenheight-300 > .screenheight-100 {
+.vh-300 > .vh-100 {
   height: 33.33333333%;
 }
-.screenheight-300 > .screenheight-150 {
+.vh-300 > .vh-150 {
   height: 50%;
 }
-.screenheight-300 > .screenheight-200 {
+.vh-300 > .vh-200 {
   height: 66.66666667%;
 }
-.screenheight-300 > .screenheight-300 {
+.vh-300 > .vh-300 {
   height: 100%;
 }
-.screenheight-400 {
+.vh-400 {
   height: 400%;
 }
-.screenheight-400 > .screenheight-50 {
+.vh-400 > .vh-50 {
   height: 12.5%;
 }
-.screenheight-400 > .screenheight-100 {
+.vh-400 > .vh-100 {
   height: 25%;
 }
-.screenheight-400 > .screenheight-150 {
+.vh-400 > .vh-150 {
   height: 37.5%;
 }
-.screenheight-400 > .screenheight-200 {
+.vh-400 > .vh-200 {
   height: 50%;
 }
-.screenheight-400 > .screenheight-300 {
+.vh-400 > .vh-300 {
   height: 75%;
 }
-.screenheight-400 > .screenheight-400 {
+.vh-400 > .vh-400 {
   height: 100%;
 }
 .phase {
