--- a/less/main.less
+++ b/less/main.less
@@ -11,7 +11,7 @@ body {
 html, body { height: 100%; }
 
 @screenheights: 50%, 100%, 150%, 200%, 300%, 400%;
-.generate-screenheights(@screenheights);
+.generate-screenheights(@screenheights, vh-);
 
 
 
