Skrollr + Emummy gfx = Parallaxing stars
• Installed `skrollr`, `skrollr-stylesheets`, and `skrollr-ie` with bower.
	» Each now in the bower_components/ dir.
	• Each, at their current versions, added to bower.json's dependencies.
	• Set up index.html for Skrollr:
		◦ Added `<script src…>`es for `skrollr.stylesheets.min.js`,  `skrollr.min.js`, and (conditional-comment wrapped)  `skrollr.ie.min.js`.
		◦ Added skrollr init JS after includes with a sole `edgeStrategy: 'ease'` option.
		◦ Added `data-skrollr-stylesheet` attribute to `styles.css` <link>.
• Each of the `#starfield*` <div>s now has an inner class `back image` <div> so that the `background` CSS property (inner) can ease separately from the `opacity` CSS property (outer).
	• Moved background-image and background-repeat CSS into `.image` descendent selectors.
	• Changed `.phase > .back` CSS to also apply to `.phase > .back .back`.
	• Added `fixed` to the background CSS— moving relative to screen-stationary looks more convincing.
• Added opacity animations to each of the `#starfield*` elements and background-position animations to eacb of the `#starfield* > .image`s.
	» Smaller stars start visible, with larger stars coming in towards the end.
	» Since the parallaxing can give away the star layers, made the large star graphics (2 and 3) move close in speed to each other.
	• Made a simple `-skrollr-dry-animation(…, { … })` mixin to create both the `-skrollr-animation-name: …;` and `@-skrollr-keyframes … { … }` CSS in one go, with the same animation name.
		» “Don't Repeat Yourself”.
• Fix: `!important` on html/body's `height: 100%`.
	» Skrollr weirdly adds an explicit pixel height to the <body> tag's style attribute, which messes up our positioning.

Also:
• Changed the sky-phase gradient to go from cobalt-darker to blue-darker rather the reverse.
	» With the stars appearing it looks better to have it transition darker, like night fall.

--- a/less/main.less
+++ b/less/main.less
@@ -8,7 +8,7 @@ body {
 
 // full-screen-height adjustments, rules
 
-html, body { height: 100%; }
+html, body { height: 100% !important; }
 
 @screenheights: 50%, 100%, 150%, 200%, 300%, 400%;
 .generate-screenheights(@screenheights, vh-);
@@ -21,15 +21,17 @@ html, body { height: 100%; }
 	position: relative;
 	
 	> .back {
-		position: absolute;
-		width: 100%; height: 100%;
+		&, & .back {
+			position: absolute;
+			width: 100%; height: 100%;
+		}
 	}
 }
 #sky-phase {
 	.phase;
 	
 	background-color: @blue-darker;
-	#gradient > .vertical(@blue-darker, @cobalt-darker);
+	#gradient > .vertical(@cobalt-darker, @blue-darker);
 	
 	color: @cobalt;
 }
@@ -55,21 +57,107 @@ html, body { height: 100%; }
 // starfields
 
 .starfield {
-	background-repeat: repeat;
+	.image {
+		background-repeat: repeat;
+	}
 }
-#starfield1 { .starfield;
-	background-image: url('../graphics/starfield1.s512.png');
-	.opacity(0.25);
+#starfield1 {
+	.starfield;
+	
+	@initial-opacity: 1.0;
+	.opacity(@initial-opacity);
+	
+	.-skrollr-dry-animation(starfield1op; {
+		@opacityProp: ~"opacity[quadratic]";
+		start { @{opacityProp}: @initial-opacity; }
+		top-bottom { @{opacityProp}: 1.0; }
+	});
+	
+	.image {
+		background: url('../graphics/starfield1.s512.png') fixed;
+	
+		@initial-background-position: 0px 0px;
+		background-position: @initial-background-position;
+		
+		.-skrollr-dry-animation(starfield1pos; {
+			start { background-position: @initial-background-position; }
+			top-bottom { background-position: 0px -150px; }
+		});
+	}
 }
-#starfield2 { .starfield;
-	background-image: url('../graphics/starfield2.s1024.png');
-	.opacity(0.0);
+#starfield2 {
+	.starfield;
+	
+	@initial-opacity: 0.0;
+	.opacity(@initial-opacity);
+	
+	.-skrollr-dry-animation(starfield2op; {
+		@opacityProp: ~"opacity[quadratic]";
+		center { @{opacityProp}: @initial-opacity; }
+		top-bottom { @{opacityProp}: 1.0; }
+	});
+	
+	.image {
+		background: url('../graphics/starfield2.s1024.png') fixed;
+	
+		@initial-background-position: 0px 0px;
+		background-position: @initial-background-position;
+		
+		.-skrollr-dry-animation(starfield2pos; {
+			start { background-position: @initial-background-position; }
+			top-bottom { background-position: 0px -100px; }
+		});
+	}
 }
-#starfield3 { .starfield;
-	background-image: url('../graphics/starfield3.s720.png');
-	.opacity(0.0);
+#starfield3 {
+	.starfield;
+	
+	@initial-opacity: 0.0;
+	.opacity(@initial-opacity);
+	
+	.-skrollr-dry-animation(starfield3op; {
+		@opacityProp: ~"opacity[quadratic]";
+		center { @{opacityProp}: @initial-opacity; }
+		top-bottom { @{opacityProp}: 1.0; }
+	});
+	
+	.image {
+		&:extend(.starfield .image);
+		
+		background: url('../graphics/starfield3.s720.png') fixed;
+	
+		@initial-background-position: 0px 0px;
+		background-position: @initial-background-position;
+		
+		.-skrollr-dry-animation(starfield3pos; {
+			start { background-position: @initial-background-position; }
+			top-bottom { background-position: 0px -125px; }
+		});
+	}
 }
-#starfield4 { .starfield;
-	background-image: url('../graphics/starfield4.s700.png');
-	.opacity(0.5);
+#starfield4 {
+	.starfield;
+	
+	@initial-opacity: 0.25;
+	.opacity(@initial-opacity);
+	
+	.-skrollr-dry-animation(starfield4op; {
+		@opacityProp: ~"opacity[linear]";
+		start { @{opacityProp}: @initial-opacity; }
+		center { @{opacityProp}: 1.0; }
+	});
+	
+	.image {
+		&:extend(.starfield .image);
+		
+		background: url('../graphics/starfield4.s700.png') fixed;
+	
+		@initial-background-position: 0px 0px;
+		background-position: @initial-background-position;
+		
+		.-skrollr-dry-animation(starfield4pos; {
+			start { background-position: @initial-background-position; }
+			top-bottom { background-position: 0px -115px; }
+		});
+	}
 }
