--- a/css/styles-test.css
+++ b/css/styles-test.css
@@ -6267,7 +6267,7 @@ body {
 }
 html,
 body {
-  height: 100%;
+  height: 100% !important;
 }
 .vh-50 {
   height: 50%;
@@ -6353,7 +6353,8 @@ body {
 .phase {
   position: relative;
 }
-.phase > .back {
+.phase > .back,
+.phase > .back .back {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -6361,14 +6362,15 @@ body {
 #sky-phase {
   position: relative;
   background-color: #0a1828;
-  background-image: -webkit-linear-gradient(top, #0a1828 0%, #1a4163 100%);
-  background-image: -o-linear-gradient(top, #0a1828 0%, #1a4163 100%);
-  background-image: linear-gradient(to bottom, #0a1828 0%, #1a4163 100%);
+  background-image: -webkit-linear-gradient(top, #1a4163 0%, #0a1828 100%);
+  background-image: -o-linear-gradient(top, #1a4163 0%, #0a1828 100%);
+  background-image: linear-gradient(to bottom, #1a4163 0%, #0a1828 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0a1828', endColorstr='#ff1a4163', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff1a4163', endColorstr='#ff0a1828', GradientType=0);
   color: #6fa8da;
 }
-#sky-phase > .back {
+#sky-phase > .back,
+#sky-phase > .back .back {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -6383,7 +6385,8 @@ body {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff724b75', endColorstr='#ff1e5558', GradientType=0);
   color: white;
 }
-#ambitions-phase > .back {
+#ambitions-phase > .back,
+#ambitions-phase > .back .back {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -6398,37 +6401,132 @@ body {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffaccdea', GradientType=0);
   color: #3e2940;
 }
-#title-phase > .back {
+#title-phase > .back,
+#title-phase > .back .back {
   position: absolute;
   width: 100%;
   height: 100%;
 }
-.starfield {
+.starfield .image,
+#starfield3 .image,
+#starfield4 .image {
   background-repeat: repeat;
 }
 #starfield1 {
+  opacity: 1;
+  filter: alpha(opacity=100);
+  -skrollr-animation-name: starfield1op;
+}
+#starfield1 .image {
   background-repeat: repeat;
-  background-image: url('../graphics/starfield1.s512.png');
-  opacity: 0.25;
-  filter: alpha(opacity=25);
+}
+@-skrollr-keyframes starfield1op {
+  start {
+    opacity[quadratic]: 1;
+  }
+  top-bottom {
+    opacity[quadratic]: 1.0;
+  }
+}
+#starfield1 .image {
+  background: url('../graphics/starfield1.s512.png') fixed;
+  background-position: 0px 0px;
+  -skrollr-animation-name: starfield1pos;
+}
+@-skrollr-keyframes starfield1pos {
+  start {
+    background-position: 0px 0px;
+  }
+  top-bottom {
+    background-position: 0px -150px;
+  }
 }
 #starfield2 {
-  background-repeat: repeat;
-  background-image: url('../graphics/starfield2.s1024.png');
   opacity: 0;
   filter: alpha(opacity=0);
+  -skrollr-animation-name: starfield2op;
+}
+#starfield2 .image {
+  background-repeat: repeat;
+}
+@-skrollr-keyframes starfield2op {
+  center {
+    opacity[quadratic]: 0;
+  }
+  top-bottom {
+    opacity[quadratic]: 1.0;
+  }
+}
+#starfield2 .image {
+  background: url('../graphics/starfield2.s1024.png') fixed;
+  background-position: 0px 0px;
+  -skrollr-animation-name: starfield2pos;
+}
+@-skrollr-keyframes starfield2pos {
+  start {
+    background-position: 0px 0px;
+  }
+  top-bottom {
+    background-position: 0px -100px;
+  }
 }
 #starfield3 {
-  background-repeat: repeat;
-  background-image: url('../graphics/starfield3.s720.png');
   opacity: 0;
   filter: alpha(opacity=0);
+  -skrollr-animation-name: starfield3op;
+}
+#starfield3 .image {
+  background-repeat: repeat;
+}
+@-skrollr-keyframes starfield3op {
+  center {
+    opacity[quadratic]: 0;
+  }
+  top-bottom {
+    opacity[quadratic]: 1.0;
+  }
+}
+#starfield3 .image {
+  background: url('../graphics/starfield3.s720.png') fixed;
+  background-position: 0px 0px;
+  -skrollr-animation-name: starfield3pos;
+}
+@-skrollr-keyframes starfield3pos {
+  start {
+    background-position: 0px 0px;
+  }
+  top-bottom {
+    background-position: 0px -125px;
+  }
 }
 #starfield4 {
+  opacity: 0.25;
+  filter: alpha(opacity=25);
+  -skrollr-animation-name: starfield4op;
+}
+#starfield4 .image {
   background-repeat: repeat;
-  background-image: url('../graphics/starfield4.s700.png');
-  opacity: 0.5;
-  filter: alpha(opacity=50);
+}
+@-skrollr-keyframes starfield4op {
+  start {
+    opacity[linear]: 0.25;
+  }
+  center {
+    opacity[linear]: 1.0;
+  }
+}
+#starfield4 .image {
+  background: url('../graphics/starfield4.s700.png') fixed;
+  background-position: 0px 0px;
+  -skrollr-animation-name: starfield4pos;
+}
+@-skrollr-keyframes starfield4pos {
+  start {
+    background-position: 0px 0px;
+  }
+  top-bottom {
+    background-position: 0px -115px;
+  }
 }
 #wrapper {
   position: relative;
