--- a/less/main.less
+++ b/less/main.less
@@ -13,6 +13,10 @@ html, body { height: 100% !important; }
 @screenheights: 50%, 100%, 150%, 200%, 300%, 400%;
 .generate-screenheights(@screenheights, vh-);
 
+.monologue {
+	font: 50px 'Dancing Script';
+}
+
 
 
 // phases
