--- a/less/main.less
+++ b/less/main.less
@@ -8,7 +8,7 @@ body {
 
 // full-screen-height adjustments, rules
 
-html, body { height: 100% !important; }
+html, body { height: 100%; }
 
 @screenheights: 50%, 100%, 150%, 200%, 300%, 400%;
 .generate-screenheights(@screenheights, vh-);
